erDiagram
    AUTHORIZED_PEOPLE {
        varchar id PK
        varchar firstname
        varchar lastname
        varchar email UK
        varchar phonenumber
        enum role
        enum status
        datetime created_at
        datetime activated_at
    }

    USERS {
        int id PK
        varchar request_id UK
        varchar authorized_person_id FK
        varchar firstname
        varchar lastname
        varchar fullname
        varchar phonenumber
        varchar username UK
        varchar email
        varchar password
        enum role
        enum status
        tinyint activation_request
        datetime registered_at
        datetime activated_at
        tinyint must_change_password
        int temp_password_expires_at
        varchar disabled_reason
        datetime disabled_at
        varchar otp
        int otp_expiry
        varchar disabled_by
        varchar enabled_by
        datetime enabled_at
        datetime password_changed_at
    }

    CLASSES {
        varchar id PK
        varchar name
        varchar subject
        text description
        char code UK
        varchar owner FK
        enum status
        datetime created_at
    }

    CLASS_MEMBERS {
        varchar class_id PK, FK
        varchar username PK, FK
        datetime joined_at
    }

    SUBJECTS {
        varchar id PK
        varchar class_id FK
        varchar name
        varchar faculty
        datetime created_at
    }

    SUBJECT_MEMBERS {
        varchar subject_id PK, FK
        varchar username PK
        datetime joined_at
    }

    POSTS {
        varchar id PK
        varchar class_id FK
        enum type
        varchar title
        text body
        varchar link_url
        varchar posted_by FK
        datetime posted_at
        datetime deadline
        int points
    }

    POST_FILES {
        int id PK
        varchar post_id UK, FK
        varchar orig_name
        varchar stored_path
        varchar ext
        int size
    }

    COMMENTS {
        varchar id PK
        varchar post_id FK
        varchar author FK
        enum role
        text body
        datetime posted_at
    }

    SUBMISSIONS {
        int id PK
        varchar post_id FK
        varchar student_username FK
        text note
        datetime submitted_at
        decimal score
        text score_note
        datetime scored_at
        varchar scored_by FK
    }

    SUBMISSION_FILES {
        int id PK
        int submission_id UK, FK
        varchar orig_name
        varchar stored_path
        varchar ext
        int size
    }

    CALENDAR_EVENTS {
        int id PK
        varchar title
        text description
        date event_date
        time start_time
        time end_time
        varchar created_by FK
        datetime created_at
        int class_id
    }

    NOTIFICATIONS {
        varchar id PK
        varchar type
        text message
        datetime time
        tinyint is_read
    }

    SYSTEM_SETTINGS {
        varchar setting_key PK
        text setting_value
    }

    AUTHORIZED_PEOPLE ||--o{ USERS : authorizes
    USERS ||--o{ CALENDAR_EVENTS : creates
    USERS ||--o{ CLASSES : owns
    USERS ||--o{ CLASS_MEMBERS : joins
    CLASSES ||--o{ CLASS_MEMBERS : includes
    CLASSES ||--o{ SUBJECTS : contains
    SUBJECTS ||--o{ SUBJECT_MEMBERS : enrolls
    CLASSES ||--o{ POSTS : contains
    USERS ||--o{ POSTS : publishes
    POSTS ||--o| POST_FILES : attaches
    POSTS ||--o{ COMMENTS : receives
    USERS ||--o{ COMMENTS : writes
    POSTS ||--o{ SUBMISSIONS : receives
    USERS ||--o{ SUBMISSIONS : submits
    USERS |o--o{ SUBMISSIONS : scores
    SUBMISSIONS ||--o| SUBMISSION_FILES : attaches
